GNOME Bugzilla – Bug 761451
gcc: filenames from error format strings contain invalid single quotation
Last modified: 2016-02-15 21:51:09 UTC
Sometimes the files that are extracted when building, using our gcc plugin do not parse the filename correctly. They contain an extra ' somewhere in the filename. We need to improve our GCC error format string regex. See plugins/gcc/gbp-gcc-build-result-addin.c:26 for the current regex (ERROR_FORMAT_REGEX).
Created attachment 321286 [details] [review] Improved GCC error format string regex
Review of attachment 321286 [details] [review]: This doesn't seem to work for me.
It turns out this was not a problem in the regex filename extraction, but in our tracking of the current build directory from make. I pushed a fix in commit 39ddfe40e269ec623659e2a09e98dc924db79e72 which turned out to be a bit more involved than I expected.