gcc: Fix path extraction from makefile directories

It looks like we were swallowing the trialing ' when tracking changes in
the current `make' directory. This looks for a suffix when parsing
directory paths and chomps the trailing '.

https://bugzilla.gnome.org/show_bug.cgi?id=761451